News on the plotutils+ package.  See ONEWS for the news file for
the GNU plotutils package that plotutils+ is based on.


Version 3.1, 2020-12-??:

Still in development...

Changes in this version are largely aimed at making the 'graph'
program work better for interactively displaying data produced by
other programs.  With the new facilities in this release, pipelines
such as the following are recommended for this task:

    program | graph -n         # line plot
    program | graph -n -p      # point plot
    program | graph -n -ly     # line plot with logarithmic y axis
    program | graph -n -p -gy  # point plot with horizontal grid lines 
    program | graph -n -p1     # point plot with small points
    program | graph -n -C      # line plot with black line (not red)

Once the program has finished, the graph program (and the X window
showing the plot) can be terminated with Control-C, or by closing the
plot window (using whatever means the window manager provides).

The program may output multiple data sets, separated by blank lines,
which will be plotted in different colours.

These options can of course be included automatically using either a
shell alias or a shell script.  For a shell script, a final line to
run the graph program is best done as "exec graph ...", since this
results in cleaner behaviour when Control-C is used.

Details of changes:

graph:   

* A new set of default plot parameters can now be enabled with the
  --new-defaults (or -n) command-line option.  These defaults 
  improve the aesthetics of plots and reduce wasted space.  They 
  are especially appropriate for plotting in an X window, and -TX
  to specify that output device is set by default when -n is used.  
  Among the other options enabled by default by -n are --no-input, 
  --wait, --toggle-use-color, and --pad.

* There is a new --pad command-line option that toggles whether the 
  limits dervied from data for the axes are padded by expanding them 