@@ -1,5 +1,6 @@
 News on the plotutils+ package.  See ONEWS for the news file for
-the GNU plotutils package that plotutils+ is based on.
+the GNU plotutils package that plotutils+ is based on, and OONEWS
+for even older news.
 
 
 Version 3.1, 2020-12-??:
